# StateAnalysis

./: StateAnalysis.cpp  StateAnalysis.sln  readme.txt  script.sh
Release/: lcs.txt
Scripts/: script1.sh  script2.sh  script3.sh
StateAnalysis/: BSAnalysis.cpp  BSAnalysis.h  Conversion.cpp  Conversion.h  MosqConnect.cpp  StateAnalysis.cpp  StateAnalysis.sln  StateAnalysis.vcxproj  StateAnalysis.vcxproj.filters  lcs.txt  state-analisys-module.ini
StateAnalysis/Debug/: StateAnalysis.exe.recipe  StateAnalysis.ilk  StateAnalysis.vcxproj.FileListAbsolute.txt  vc142.idb
StateAnalysis/Debug/StateAnalysis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StateAnalysis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
StateAnalysis/x64/Debug/: StateAnalysis.exe.recipe  StateAnalysis.ilk  vc142.idb
StateAnalysis/x64/Debug/StateAnalysis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StateAnalysis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Subscribe/: Mosquitto.cpp  readme.txt
libormodule2/: CMakeLists.txt  DataBlock.cpp  DataBlock.h  Field.h  ORModule.cpp  ORModule.h  ORModuleImpl.cpp  ORModuleImpl.h  ORSynchronizer.cpp  ORSynchronizer.h  README.md  Record.cpp  Record.h  SimpleDataBlock.h  Subscription.cpp  Subscription.h  URecord.h  optirepair  ordebug.cpp  ordebug.h  orfile.cpp  orfile.h  ormodule.pc.in  ormodulecallback.cpp  ormodulecallback.h  orstatus.cpp  orstatus.h  orutils.cpp  orutils.h
libormodule2/brocker/: DefaultBrocker.cpp  DefaultBrocker.h  IBrocker.cpp  IBrocker.h  IBrockerCallback.h  MQTTBrocker.cpp  MQTTBrocker.h
libormodule2/database/: ClickhouseDB.cpp  ClickhouseDB.h  DBMongo.cpp  DBMongo.h  DefaultDB.cpp  DefaultDB.h  FileDB.cpp  FileDB.h  IDatabase.cpp  IDatabase.h  IDatabaseCallback.h  MySQLDB.cpp  MySQLDB.h  SqliteDB.cpp  SqliteDB.h  SystemAPIDB.cpp  SystemAPIDB.h
libormodule2/datatypes/: DataBoundary.h  DataHit.h  DataQuery.h  DataSpectr.h  DataStats.h  DataTaho.h  DisplacementStat.h  FileData.h  ModuleDescription.h  VelocityStat.h
